--- a/test/Shared/test.base.props
+++ b/test/Shared/test.base.props
@@ -8,7 +8,11 @@
 
   <Import Project="../../src/Shared/base.props" />
 
-  <ItemGroup>
+	<ItemGroup>
+		<Content Include="../Shared/xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+	</ItemGroup>
+
+	<ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
     <PackageReference Include="xunit" Version="2.4.2" />
